Fix broken intersection observer

--- a/source/css/scss/components/_hero.scss
+++ b/source/css/scss/components/_hero.scss
@@ -17,21 +17,18 @@
 }
 
 .c-hero__body {
-
-    @media all and (min-width: $bp-med) {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,0) 20%, #000 100%);
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,0) 20%, #000 100%);
 }
 
 /**
